--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -8,11 +9,26 @@
 }
 
 main {
-    min-height: 100vh;
+
     background-color: #212121;
 }
 
+header {
+    display: flex;
+    padding: 0 10px;
+    justify-content: space-between;
+    align-items: center;
+    background: linear-gradient(to bottom, #000, #212121);
+}
+
+header img {
+    height: 10vh;
+}
+
+
+
 .container {
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -27,6 +43,8 @@ main {
 }
 
 .form .form_front {
+    border: 1px solid rgb(61, 106, 255);
+
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -35,8 +53,16 @@ main {
     backface-visibility: hidden;
     padding: 65px 45px;
     border-radius: 15px;
-    box-shadow: inset 2px 2px 10px rgba(0, 0, 0, 1),
-        inset -1px -1px 5px rgba(255, 255, 255, 0.6);
+    /* box-shadow: inset 2px 2px 10px rgba(0, 0, 0, 1),
+        inset -1px -1px 5px rgba(255, 255, 255, 0.6); */
+}
+
+.form .form_front p {
+    transition: .7s all;
+    /* visibility: hidden; */
+    opacity: 0;
+    color: red;
+    text-align: center;
 }
 
 .form .form_back {
@@ -57,7 +83,7 @@ main {
 .form_details {
     font-size: 25px;
     font-weight: 600;
-    padding-bottom: 10px;
+    /* padding-bottom: 10px; */
     color: white;
 }
 
@@ -71,8 +97,10 @@ main {
     background-color: #212121;
     border-radius: 6px;
     border: 2px solid #212121;
-    box-shadow: 6px 6px 10px rgba(0, 0, 0, 1),
-        1px 1px 10px rgba(255, 255, 255, 0.6);
+    border: 1px solid rgb(61, 106, 255);
+
+    /* box-shadow: 6px 6px 10px rgba(0, 0, 0, 1),
+        1px 1px 10px rgba(255, 255, 255, 0.6); */
 }
 
 .input::placeholder {
@@ -98,8 +126,10 @@ main {
     background-color: #212121;
     border-radius: 6px;
     border: 2px solid #212121;
-    box-shadow: 6px 6px 10px rgba(0, 0, 0, 1),
-        1px 1px 10px rgba(255, 255, 255, 0.6);
+    border: 1px solid rgb(61, 106, 255);
+
+    /* box-shadow: 6px 6px 10px rgba(0, 0, 0, 1),
+        1px 1px 10px rgba(255, 255, 255, 0.6); */
     color: #fff;
     font-size: 15px;
     font-weight: bold;
@@ -144,7 +174,7 @@ main {
 custom-dashboard {
     color: beige;
     width: 100%;
-    min-height: 100vh;
+    min-height: 90vh;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -152,6 +182,7 @@ custom-dashboard {
 }
 
 custom-user-info {
+    margin-left: 15px;
     width: 420px;
     z-index: 10;
     border: 1px solid rgb(61, 106, 255);
@@ -162,7 +193,7 @@ custom-user-info {
         -15px -15px 30px rgb(60, 60, 60);
 }
 
-custom-user-info h1 {
+h1 {
     font-size: 1.3em;
     text-align: center;
     padding: 10px;
@@ -204,20 +235,30 @@ custom-user-info strong {
 pie-chart {
     position: absolute;
     transition: all .7s;
+    margin-left: 15px;
+    width: 420px;
+    height: 340px;
 }
 
 point-chart {
     position: absolute;
     transition: all .7s;
+    margin-left: 15px;
+    width: 420px;
+    height: 340px;
 }
 
 pie-chart svg {
+    display: block;
+    margin: auto;
     width: 200px;
     height: 200px;
 }
 
 point-chart svg {
-    width: 300px;
+    display: block;
+    margin: auto;
+    width: 400px;
     height: 300px;
 }
 
