--- a/css/main.css
+++ b/css/main.css
@@ -13,20 +13,6 @@ main {
     background-color: #212121;
 }
 
-header {
-    display: flex;
-    padding: 0 10px;
-    justify-content: space-between;
-    align-items: center;
-    background: linear-gradient(to bottom, #000, #212121);
-}
-
-header img {
-    height: 10vh;
-}
-
-
-
 .container {
     height: 100vh;
     display: flex;
@@ -171,26 +157,55 @@ header img {
     transform: rotateY(-180deg);
 }
 
+/* grid element  */
+
 custom-dashboard {
     color: beige;
     width: 100%;
-    min-height: 90vh;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
+    height: 100vh;
+
+    display: grid;
+    grid-template-columns: repeat(4, minmax(250px, 1fr));
+    grid-template-rows: repeat(3, 1fr);
+    grid-auto-flow: dense;
+    gap: 5px;
 }
 
+custom-dashboard > div {
+    overflow-x: scroll;
+    overflow-y: scroll;
+    border: 1px solid #fff;
+}
+
+.layer_1 {
+    grid-row: 1/3;
+    display: flex;
+}
+
+.layer_6 {
+    grid-row: 2/4;
+    grid-column: 2/4;
+}
+
+.layer_8 {
+    position: relative;
+}
+
+/* final of grid element  */
+
+
 custom-user-info {
-    margin-left: 15px;
-    width: 420px;
+    background: radial-gradient(circle 280px at 0% 0%, #444444, #212121);
+    flex-grow: 1;
     z-index: 10;
-    border: 1px solid rgb(61, 106, 255);
-    padding: 10px;
-    border-radius: 30px;
-    background: #212121;
-    box-shadow: 15px 15px 30px rgb(25, 25, 25),
-        -15px -15px 30px rgb(60, 60, 60);
+    padding: 5px;
+    width: 100%;
+    display: flex;
+}
+
+.user-info-container {
+    display: grid;
+    grid-template-rows: repeat(10,1fr);
 }
 
 h1 {
@@ -207,6 +222,10 @@ custom-user-info p {
 custom-user-info strong {
     margin: 5px;
     color: #3EFA7D;
+}
+
+.user-info {
+    flex-grow: 1;
 }
 
 #chartChoice {
@@ -233,38 +252,59 @@ custom-user-info strong {
 }
 
 pie-chart {
-    position: absolute;
+    background: radial-gradient(circle 280px at 0% 0%, #444444, #212121);
     transition: all .7s;
-    margin-left: 15px;
-    width: 420px;
-    height: 340px;
+    width: 100%;
 }
 
 point-chart {
-    position: absolute;
+    position: relative;
+    background: radial-gradient(circle 280px at 0% 0%, #444444, #212121);
     transition: all .7s;
+    width: 100%;
+}
+
+stick-chart {
+    position: relative;
     margin-left: 15px;
-    width: 420px;
-    height: 340px;
+    width: 100%;
+    z-index: 10;
+    padding: 10px;
+    border-radius: 30px;
+    box-shadow: 15px 15px 30px rgb(25, 25, 25),
+        -15px -15px 30px rgb(60, 60, 60);
 }
 
 pie-chart svg {
     display: block;
     margin: auto;
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
 }
 
 point-chart svg {
     display: block;
     margin: auto;
     width: 400px;
-    height: 300px;
+}
+
+stick-chart svg {
+    display: block;
+    margin: auto;
+    width: 400px;
+    height: 270px;
+}
+
+stick-chart svg rect {
+    fill: #FAAA32;
 }
 
 
 .bulle {
+    z-index: 1000;
     position: absolute;
+    bottom: 0;
+    top: 0;
     background-color: beige;
     padding: 10px;
     margin-left: 10px;
@@ -362,3 +402,110 @@ point-chart svg {
 
     background-color: #3EFA7D;
 }
+
+/* card for level and for xp  */
+
+.outer {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    padding: 1px;
+    background: radial-gradient(circle 230px at 0% 0%, #ffffff, #212121);
+    position: relative;
+}
+
+.dot {
+    width: 5px;
+    aspect-ratio: 1;
+    position: absolute;
+    background-color: #3EFA7D;
+    box-shadow: 0 0 10px #FAAA32;
+    border-radius: 100px;
+    z-index: 2;
+    right: 10%;
+    top: 10%;
+    animation: moveDot 6s linear infinite;
+}
+
+@keyframes moveDot {
+
+    0%,
+    100% {
+        top: 10%;
+        right: 10%;
+    }
+
+    25% {
+        top: 10%;
+        right: calc(100% - 35px);
+    }
+
+    50% {
+        top: calc(100% - 30px);
+        right: calc(100% - 35px);
+    }
+
+    75% {
+        top: calc(100% - 30px);
+        right: 10%;
+    }
+}
+
+.card {
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    border-radius: 9px;
+    border: solid 1px #212121;
+    background-size: 20px 20px;
+    background: radial-gradient(circle 280px at 0% 0%, #444444, #212121);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    flex-direction: column;
+    color: #fff;
+}
+
+.card .text {
+    font-weight: bolder;
+    font-size: 4rem;
+    background: #FAAA32;
+    background-clip: text;
+    color: transparent;
+}
+
+.layer_3 .text {
+    background: #3EFA7D;
+    background-clip: text;
+} 
+
+.line {
+    width: 100%;
+    height: 1px;
+    position: absolute;
+    background-color: #FAAA32;
+}
+
+.topl {
+    top: 10%;
+    background: linear-gradient(90deg, #f3c37a 30%, #FAAA32 70%);
+}
+
+.bottoml {
+    bottom: 10%;
+}
+
+.leftl {
+    left: 10%;
+    width: 1px;
+    height: 100%;
+    background: linear-gradient(180deg, #f3c37a 30%, #faaa32 70%);
+}
+
+.rightl {
+    right: 10%;
+    width: 1px;
+    height: 100%;
+}
+/*ENNNNDDDDD card for level and for xp  */
